[build-system]
# Minimum requirements for the build system to execute.
# See https://github.com/scipy/scipy/pull/12940 for the AIX issue.
requires = [
    "setuptools>=51.0.0",
    "wheel",
    "Cython>=0.29.24,<3",  # Note: sync with setup.py, environment.yml and asv.conf.json
    "oldest-supported-numpy>=0.10"
]
# uncomment to enable pep517 after versioneer problem is fixed.
# https://github.com/python-versioneer/python-versioneer/issues/193
# build-backend = "setuptools.build_meta"

[tool.black]
target-version = ['py38', 'py39']
exclude = '''
(
    asv_bench/env
  | \.egg
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | setup.py
)
'''

[tool.pytest.ini_options]
# sync minversion with pyproject.toml & install.rst
minversion =  "6.0"
addopts = "--strict-data-files --strict-markers --strict-config --capture=no --durations=30 --junitxml=test-data.xml"
xfail_strict = true
testpaths = "pandas"
doctest_optionflags = [
  "NORMALIZE_WHITESPACE",
  "IGNORE_EXCEPTION_DETAIL",
  "ELLIPSIS",
]
filterwarnings = [
  "error:Sparse:FutureWarning",
  "error:The SparseArray:FutureWarning",
]
junit_family = "xunit2"
markers = [
  "single_cpu: tests that should run on a single cpu only",
  "slow: mark a test as slow",
  "network: mark a test as network",
  "db: tests requiring a database (mysql or postgres)",
  "clipboard: mark a pd.read_clipboard test",
  "arm_slow: mark a test as slow for arm64 architecture",
  "arraymanager: mark a test to run with ArrayManager enabled",
]
asyncio_mode = "strict"

[tool.mypy]
# Import discovery
mypy_path = "typings"
files = ["pandas", "typings"]
namespace_packages = false
explicit_package_bases = false
ignore_missing_imports = true
follow_imports = "normal"
follow_imports_for_stubs = false
no_site_packages = false
no_silence_site_packages = false
# Platform configuration
python_version = "3.8"
platform = "linux-64"
# Disallow dynamic typing
disallow_any_unimported = false # TODO
disallow_any_expr = false # TODO
disallow_any_decorated = false # TODO
disallow_any_explicit = false # TODO
disallow_any_generics = false # TODO
disallow_subclassing_any = false # TODO
# Untyped definitions and calls
disallow_untyped_calls = false # TODO
disallow_untyped_defs = false # TODO
disallow_incomplete_defs = false # TODO
check_untyped_defs = true
disallow_untyped_decorators = true
# None and Optional handling
no_implicit_optional = true
strict_optional = true
# Configuring warnings
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = false # TODO
warn_unreachable = false # GH#27396
# Suppressing errors
show_none_errors = true
ignore_errors = false
enable_error_code = "ignore-without-code"
# Miscellaneous strictness flags
allow_untyped_globals = false
allow_redefinition = false
local_partial_types = false
implicit_reexport = true
strict_equality = true
# Configuring error messages
show_error_context = false
show_column_numbers = false
show_error_codes = true

[[tool.mypy.overrides]]
module = [
  "pandas.tests.*",
  "pandas._version",
  "pandas.io.clipboard",
]
check_untyped_defs = false

[[tool.mypy.overrides]]
module = [
  "pandas.tests.apply.test_series_apply",
  "pandas.tests.arithmetic.conftest",
  "pandas.tests.arrays.sparse.test_combine_concat",
  "pandas.tests.dtypes.test_common",
  "pandas.tests.frame.methods.test_to_records",
  "pandas.tests.groupby.test_rank",
  "pandas.tests.groupby.transform.test_transform",
  "pandas.tests.indexes.interval.test_interval",
  "pandas.tests.indexing.test_categorical",
  "pandas.tests.io.excel.test_writers",
  "pandas.tests.reductions.test_reductions",
  "pandas.tests.test_expressions",
]
ignore_errors = true

# To be kept consistent with "Import Formatting" section in contributing.rst
[tool.isort]
known_pre_libs = "pandas._config"
known_pre_core = ["pandas._libs", "pandas._typing", "pandas.util._*", "pandas.compat", "pandas.errors"]
known_dtypes = "pandas.core.dtypes"
known_post_core = ["pandas.tseries", "pandas.io", "pandas.plotting"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY" ,"PRE_LIBS" , "PRE_CORE", "DTYPES", "FIRSTPARTY", "POST_CORE", "LOCALFOLDER"]
profile = "black"
combine_as_imports = true
force_grid_wrap = 2
force_sort_within_sections = true
skip_glob = "env"
skip = "pandas/__init__.py"

[tool.pyright]
pythonVersion = "3.8"
typeCheckingMode = "basic"
include = ["pandas", "typings"]
exclude = ["pandas/tests", "pandas/io/clipboard", "pandas/util/version"]
# enable subset of "strict"
reportDuplicateImport = true
reportInvalidStubStatement = true
reportOverlappingOverload = true
reportPropertyTypeMismatch = true
reportUntypedClassDecorator = true
reportUntypedFunctionDecorator = true
reportUntypedNamedTuple = true
# disable subset of "basic"
reportGeneralTypeIssues = false
reportMissingModuleSource = false
reportOptionalCall = false
reportOptionalIterable = false
reportOptionalMemberAccess = false
reportOptionalOperand = false
reportOptionalSubscript = false
reportPrivateImportUsage = false
reportUnboundVariable = false
reportUnsupportedDunderAll = false

[tool.conda-lock]
# pytorch channel for pytorch on windows
channels = ['conda-forge', 'pytorch']

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
python-dateutil = ">=2.8.1,<3"
numpy = ">=1.18.5,<2"
pytz = ">=2020.1"
beautifulsoup4 = { version = ">=4.9.3,<5" , optional = true }
blosc = { version = ">=1.10.2,<2" , optional = true }
bottleneck = { version = ">=1.3.2,<2" , optional = true }
brotlipy = { version = ">=0.7.0,<1" , optional = true }
fastparquet = { version = ">=0.4.0,<1" , optional = true }
fsspec = { version = ">=2021.05.0" , optional = true }
html5lib = { version = ">=1.1,<2" , optional = true }
hypothesis = { version = ">=6.13.0,<7" , optional = true }
gcsfs = { version = ">=2021.05.0" , optional = true }
jinja2 = { version = ">=3.0.0,<4" , optional = true }
lxml = { version = ">=4.6.3,<5" , optional = true }
matplotlib = { version = ">=3.3.2,<4" , optional = true }
numba = { version = ">=0.53.1,<1" , optional = true }
numexpr = { version = ">=2.7.3,<3" , optional = true }
odfpy = { version = ">=1.4.1,<2" , optional = true }
openpyxl = { version = ">=3.0.7,<4" , optional = true }
pandas-gbq = { version = ">=0.15.0,<1" , optional = true }
psycopg2 = { version = ">=2.8.6,<3" , optional = true }
pyarrow = { version = ">=1.0.1" , optional = true }
pymysql = { version = ">=1.0.2,<2" , optional = true }
pyreadstat = { version = ">=1.1.2,<2" , optional = true }
pytables = { version = ">=3.6.1,<4" , optional = true }
python-snappy = { version = ">=0.6.0,<1" , optional = true }
pyxlsb = { version = ">=1.0.8,<2" , optional = true }
s3fs = { version = ">=2021.05.0" , optional = true }
scipy = { version = ">=1.7.1,<2" , optional = true }
sqlalchemy = { version = ">=1.4.16,<2" , optional = true }
tabulate = { version = ">=0.8.9,<1" , optional = true }
xarray = { version = ">=0.19.0,<1" , optional = true }
xlrd = { version = ">=2.0.1,<3" , optional = true }
xlsxwriter = { version = ">=1.4.3,<2" , optional = true }
xlwt = { version = ">=1.3.0,<2" , optional = true }
zstandard = { version = ">=0.15.2,<1" , optional = true }

[tool.poetry.dev-dependencies]
# Code checks
pre-commit = ">=2.19.0,<3"
mypy = "=0.950"
# Testing (CI) (hypothesis required but included as optional dependency)
cython = "=0.29.24"
pytest = ">=6.0,<8"
pytest-cov = ">=3.0,<4"
pytest-xdist = ">=2.5,<3"
psutil = ">=5.9,<6"
pytest-asyncio = ">=0.18,<1"
boto3 = ">=1,<2"
# Testing (Local)
moto = ">=3.1.9,<4"
flask = ">=2.1.2,<3"
c-compiler = ">=1.4.2,<2"
cxx-compiler = ">=1.4.2,<2"
# Downstream Tests
aiobotocore = "<2"
botocore = ">=1,<2"
cftime = ">=1.6.0,<2"
dask = ">=2022.5.0"
toolz = ">=0.11.2,<1"
ipython = ">=8.3.0,<9"
geopandas-base = ">=0.10.2,<1"
# TODO: https://github.com/Quansight-Labs/beni/issues/17
#seaborn = ">=0.11.2,<1"
scikit-learn = ">=1.1.0,<2"
statsmodels = ">=0.13.2,<1"
coverage = ">=6.3,<7"
pandas-datareader = ">=0.10.0,<1"
pyyaml = ">=6.0,<7"
py = ">=1.11.0,<2"
pytorch = ">=1,<2"
# ASV
asv = ">=0.5.1,<0.6"
# Documentation
gitpython = ">=3.1,<4"
numpydoc = ">=1.3,<2"
pandas-dev-flaker = "=0.5.0"
pydata-sphinx-theme = "=0.8.0"
pytest-cython = ">=0.2,<1"
sphinx = ">=4.5,<5"
sphinx-panels = ">=0.6,<1"
types-python-dateutil = ">=2.8.15,<3"
types-pymysql = ">=1.0.19,<2"
types-pytz = ">=2021.3.8"
types-setuptools = ">=57.4.14,<60"
nbconvert = ">=6.4.5,<7"
nbsphinx = ">=0.8.8,<1"
pandoc = ">=2.18,<3"
ipywidgets = ">=7.7.0,<8"
nbformat = ">=5.4.0,<6"
notebook = ">=6.4.11,<7"
ipykernel = ">=6.13.0,<7"
natsort = ">=8.1.0,<9"
# Website (jinja2, pyyaml required but included above)
markdown = ">=3.3.7,<4"
feedparser = ">=6.0.8,<7"
requests = ">=2.27.1,<3"

[tool.poetry.extras]
optional_dependencies = [
    "beautifulsoup4",
    "blosc",
    "bottleneck",
    "brotlipy",
    "fastparquet",
    "fsspec",
    "html5lib",
    "hypothesis",
    "gcsfs",
    "jinja2",
    "lxml",
    "matplotlib",
    "numba",
    "numexpr",
    "odfpy",
    "openpyxl",
    "pandas-gbq",
    "psycopg2",
    "pyarrow",
    "pymysql",
    "pyreadstat",
    "pytables",
    "python-snappy",
    "pyxlsb",
    "s3fs",
    "scipy",
    "sqlalchemy",
    "tabulate",
    "xarray",
    "xlrd",
    "xlsxwriter",
    "xlwt",
    "zstandard"
]
code_checks = ["pre-commit", "mypy"]
testing_ci = [
    "cython",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "psutil",
    "pytest-asyncio",
    "hypothesis",
    "boto3"
]
testing_local = ["moto", "flask", "c-compiler", "cxx-compiler"]
downsteam_tests = [
    "aiobotocore",
    "botocore",
    "cftime",
    "dask",
    "toolz",
    "ipython",
    "geopandas-base",
    # TODO: https://github.com/Quansight-Labs/beni/issues/17
    #"seaborn",
    "scikit-learn",
    "statsmodels",
    "coverage",
    "pandas-datareader",
    "pyyaml",
    "py",
    "pytorch"
]
asv = ["asv"]
docs = [
    "gitpython",
    "numpydoc",
    "pandas-dev-flaker",
    "pydata-sphinx-theme",
    "pytest-cython",
    "sphinx",
    "sphinx-panels",
    "types-python-dateutil",
    "types-pymysql",
    "types-pytz",
    "types-setuptools",
    "nbconvert",
    "nbsphinx",
    "pandoc",
    "ipywidgets",
    "nbformat",
    "notebook",
    "ipykernel",
    "natsort"
]
website = ["markdown", "feedparser", "requests", "jinja2", "pyyaml"]
